# CustomEngine

./: .gitignore  CMakeLists.txt  README.md
CustomEngine/include/: Actor.h  GameMath.h  Scene.h  Texture.h  game.h
CustomEngine/src/: Actor.cpp  Scene.cpp  Texture.cpp  game.cpp
TestGame/include/: TestScene.h
TestGame/src/: TestScene.cpp  main.cpp
include/: Actor.h  GameMath.h  game.h
src/: Actor.cpp  Texture.cpp  game.cpp  main.cpp
